--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,9 @@
 {
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mocha": "^10.2.0",
